// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Base/Nav/SideMenu/index mount and unmount component 1`] = `
<body>
  <div>
    <div
      class="dms-layout-side css-13dah2i"
    >
      <div
        class="dms-layout-side-start"
      >
        <div>
          <div
            class="title"
          >
            <span
              class="label label-primary"
            >
              Action
            </span>
            <span
              class="label label-base"
            >
              SQLE
            </span>
          </div>
        </div>
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div>
            <div
              aria-busy="true"
              aria-live="polite"
              class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
            >
              <span
                class="ant-spin-dot ant-spin-dot-spin"
              >
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
                <i
                  class="ant-spin-dot-item"
                />
              </span>
            </div>
          </div>
          <div
            class="ant-spin-container ant-spin-blur"
          >
            <div
              class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
              searchinputref="[object Object]"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-item"
                >
                  <span
                    class="custom-select-option-content css-vgjuov"
                  >
                    <span
                      class="custom-select-option-content-prefix"
                    >
                      <span
                        class="project-flag-icon css-u3jcp4"
                      >
                        <svg
                          fill="none"
                          height="18"
                          viewBox="0 0 18 18"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M2.25 2.25H9.2865C9.42575 2.25007 9.56222 2.28891 9.68064 2.36216C9.79907 2.43542 9.89476 2.54019 9.957 2.66475L10.5 3.75H15C15.1989 3.75 15.3897 3.82902 15.5303 3.96967C15.671 4.11032 15.75 4.30109 15.75 4.5V12.75C15.75 12.9489 15.671 13.1397 15.5303 13.2803C15.3897 13.421 15.1989 13.5 15 13.5H10.2135C10.0743 13.4999 9.93778 13.4611 9.81936 13.3878C9.70093 13.3146 9.60524 13.2098 9.543 13.0853L9 12H3.75V16.5H2.25V2.25Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="custom-select-option-content-label"
                    >
                      test_project_1
                    </span>
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="custom-icon custom-icon-right-arrow-select-suffix css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.78145 7.99999L5.48145 4.69999L6.42411 3.75732L10.6668 7.99999L6.42411 12.2427L5.48145 11.3L8.78145 7.99999Z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <ul
          class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu css-dev-only-do-not-override-txh9fw"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
      <div
        class="dms-layout-side-end"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-spin-container"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
            >
              <span
                class="ant-avatar-string"
                style="transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
        </div>
        <div
          class="global-system-icon-wrapper"
        >
          <span
            class="custom-icon-global-system css-u3jcp4"
          >
            <svg
              fill="none"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.125 4.875L9 0.75L1.875 4.875V13.125L9 17.25L16.125 13.125V4.875ZM9 12.75C11.0711 12.75 12.75 11.0711 12.75 9C12.75 6.92893 11.0711 5.25 9 5.25C6.92893 5.25 5.25 6.92893 5.25 9C5.25 11.0711 6.92893 12.75 9 12.75Z"
                fill="#c3c6cd"
                fill-rule="evenodd"
              />
              <path
                d="M9 11.25C9.59674 11.25 10.169 11.0129 10.591 10.591C11.0129 10.169 11.25 9.59674 11.25 9C11.25 8.40326 11.0129 7.83097 10.591 7.40901C10.169 6.98705 9.59674 6.75 9 6.75C8.40326 6.75 7.83097 6.98705 7.40901 7.40901C6.98705 7.83097 6.75 8.40326 6.75 9C6.75 9.59674 6.98705 10.169 7.40901 10.591C7.83097 11.0129 8.40326 11.25 9 11.25Z"
                fill="#8a8f99"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test Base/Nav/SideMenu/index mount and unmount component 2`] = `
<body>
  <div>
    <div
      class="dms-layout-side css-13dah2i"
    >
      <div
        class="dms-layout-side-start"
      >
        <div>
          <div
            class="title"
          >
            <span
              class="label label-primary"
            >
              Action
            </span>
            <span
              class="label label-base"
            >
              SQLE
            </span>
          </div>
        </div>
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
              searchinputref="[object Object]"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-item"
                >
                  <span
                    class="custom-select-option-content css-vgjuov"
                  >
                    <span
                      class="custom-select-option-content-prefix"
                    >
                      <span
                        class="css-u3jcp4"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="lock"
                          fill="currentColor"
                          focusable="false"
                          height="18"
                          viewBox="64 64 896 896"
                          width="18"
                        >
                          <path
                            d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="custom-select-option-content-label"
                    >
                      test_project_1
                    </span>
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="custom-icon custom-icon-right-arrow-select-suffix css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.78145 7.99999L5.48145 4.69999L6.42411 3.75732L10.6668 7.99999L6.42411 12.2427L5.48145 11.3L8.78145 7.99999Z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <ul
          class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu css-dev-only-do-not-override-txh9fw"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
      <div
        class="dms-layout-side-end"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-spin-container"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
            >
              <span
                class="ant-avatar-string"
                style="transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
        </div>
        <div
          class="global-system-icon-wrapper"
        >
          <span
            class="custom-icon-global-system css-u3jcp4"
          >
            <svg
              fill="none"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.125 4.875L9 0.75L1.875 4.875V13.125L9 17.25L16.125 13.125V4.875ZM9 12.75C11.0711 12.75 12.75 11.0711 12.75 9C12.75 6.92893 11.0711 5.25 9 5.25C6.92893 5.25 5.25 6.92893 5.25 9C5.25 11.0711 6.92893 12.75 9 12.75Z"
                fill="#c3c6cd"
                fill-rule="evenodd"
              />
              <path
                d="M9 11.25C9.59674 11.25 10.169 11.0129 10.591 10.591C11.0129 10.169 11.25 9.59674 11.25 9C11.25 8.40326 11.0129 7.83097 10.591 7.40901C10.169 6.98705 9.59674 6.75 9 6.75C8.40326 6.75 7.83097 6.98705 7.40901 7.40901C6.98705 7.83097 6.75 8.40326 6.75 9C6.75 9.59674 6.98705 10.169 7.40901 10.591C7.83097 11.0129 8.40326 11.25 9 11.25Z"
                fill="#8a8f99"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test Base/Nav/SideMenu/index mount and unmount component 3`] = `
<body>
  <div>
    <div
      class="dms-layout-side css-13dah2i"
    >
      <div
        class="dms-layout-side-start"
      >
        <div>
          <div
            class="title"
          >
            <span
              class="label label-primary"
            >
              Action
            </span>
            <span
              class="label label-base"
            >
              SQLE
            </span>
          </div>
        </div>
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-select ant-select-lg ant-select-borderless basic-select-wrapper custom-select-namespace custom-project-selector css-wk9fc9 css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-open"
              searchinputref="[object Object]"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-expanded="true"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-item"
                >
                  <span
                    class="custom-select-option-content css-vgjuov"
                  >
                    <span
                      class="custom-select-option-content-prefix"
                    >
                      <span
                        class="css-u3jcp4"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="lock"
                          fill="currentColor"
                          focusable="false"
                          height="18"
                          viewBox="64 64 896 896"
                          width="18"
                        >
                          <path
                            d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="custom-select-option-content-label"
                    >
                      test_project_1
                    </span>
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="custom-icon custom-icon-right-arrow-select-suffix css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.78145 7.99999L5.48145 4.69999L6.42411 3.75732L10.6668 7.99999L6.42411 12.2427L5.48145 11.3L8.78145 7.99999Z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
        <ul
          class="ant-menu ant-menu-root ant-menu-inline ant-menu-light custom-menu css-dev-only-do-not-override-txh9fw"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        />
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
      <div
        class="dms-layout-side-end"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
        >
          <div
            class="ant-spin-container"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
            >
              <span
                class="ant-avatar-string"
                style="transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
        </div>
        <div
          class="global-system-icon-wrapper"
        >
          <span
            class="custom-icon-global-system css-u3jcp4"
          >
            <svg
              fill="none"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.125 4.875L9 0.75L1.875 4.875V13.125L9 17.25L16.125 13.125V4.875ZM9 12.75C11.0711 12.75 12.75 11.0711 12.75 9C12.75 6.92893 11.0711 5.25 9 5.25C6.92893 5.25 5.25 6.92893 5.25 9C5.25 11.0711 6.92893 12.75 9 12.75Z"
                fill="#c3c6cd"
                fill-rule="evenodd"
              />
              <path
                d="M9 11.25C9.59674 11.25 10.169 11.0129 10.591 10.591C11.0129 10.169 11.25 9.59674 11.25 9C11.25 8.40326 11.0129 7.83097 10.591 7.40901C10.169 6.98705 9.59674 6.75 9 6.75C8.40326 6.75 7.83097 6.98705 7.40901 7.40901C6.98705 7.83097 6.75 8.40326 6.75 9C6.75 9.59674 6.98705 10.169 7.40901 10.591C7.83097 11.0129 8.40326 11.25 9 11.25Z"
                fill="#8a8f99"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up custom-select-popup-wrapper css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; padding: 0px; width: 240px; min-width: 0;"
    >
      <div>
        <div
          class="css-h34pqn"
        >
          <span
            class="ant-input-affix-wrapper basic-input-wrapper custom-select-popup-search-input css-d0jdfn ant-input-affix-wrapper-borderless css-dev-only-do-not-override-6svbnr"
          >
            <input
              class="ant-input ant-input-borderless css-dev-only-do-not-override-6svbnr"
              placeholder="搜索"
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <span
                class="ant-input-clear-icon ant-input-clear-icon-hidden"
                role="button"
                tabindex="-1"
              >
                <span
                  class="custom-icon custom-icon-close css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </span>
          <div
            class="select-options-group-label"
          >
            最近打开的项目
          </div>
          <div
            class="css-15pnbqu"
          >
            <div
              id="rc_select_TEST_OR_SSR_list"
              role="listbox"
              style="height: 0px; width: 0px; overflow: hidden;"
            >
              <div
                aria-selected="true"
                id="rc_select_TEST_OR_SSR_list_0"
                role="option"
              >
                100121
              </div>
            </div>
            <div
              class="rc-virtual-list"
              style="position: relative;"
            >
              <div
                class="rc-virtual-list-holder"
                style="max-height: 256px; overflow-y: hidden;"
              >
                <div>
                  <div
                    class="rc-virtual-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-selected="true"
                      class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                    >
                      <div
                        class="ant-select-item-option-content"
                      >
                        <div
                          class="css-gmbytu"
                        >
                          <span
                            class="css-u3jcp4"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="lock"
                              fill="currentColor"
                              focusable="false"
                              height="18"
                              viewBox="64 64 896 896"
                              width="18"
                            >
                              <path
                                d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                              />
                            </svg>
                          </span>
                          <span
                            class="project-selector-label-text"
                          >
                            test_project_1
                          </span>
                        </div>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-item-option-state"
                        style="user-select: none;"
                        unselectable="on"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="rc-virtual-list-scrollbar"
                style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
              >
                <div
                  class="rc-virtual-list-scrollbar-thumb"
                  style="width: 100%; height: 128px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
                />
              </div>
            </div>
          </div>
          <div
            class="select-options-group-label"
          >
            您所属的项目
          </div>
          <div
            class="css-11lv9el"
          >
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <span
                    class="css-u3jcp4"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="lock"
                      fill="currentColor"
                      focusable="false"
                      height="18"
                      viewBox="64 64 896 896"
                      width="18"
                    >
                      <path
                        d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                      />
                    </svg>
                  </span>
                  <span
                    class="project-selector-label-text"
                  >
                    test_project_1
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <span
                    class="project-flag-icon css-u3jcp4"
                  >
                    <svg
                      fill="none"
                      height="18"
                      viewBox="0 0 18 18"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2.25 2.25H9.2865C9.42575 2.25007 9.56222 2.28891 9.68064 2.36216C9.79907 2.43542 9.89476 2.54019 9.957 2.66475L10.5 3.75H15C15.1989 3.75 15.3897 3.82902 15.5303 3.96967C15.671 4.11032 15.75 4.30109 15.75 4.5V12.75C15.75 12.9489 15.671 13.1397 15.5303 13.2803C15.3897 13.421 15.1989 13.5 15 13.5H10.2135C10.0743 13.4999 9.93778 13.4611 9.81936 13.3878C9.70093 13.3146 9.60524 13.2098 9.543 13.0853L9 12H3.75V16.5H2.25V2.25Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <span
                    class="project-selector-label-text"
                  >
                    test_project_2
                  </span>
                </div>
              </div>
            </div>
            <div
              class="ant-select-item ant-select-item-option"
            >
              <div
                class="ant-select-item-option-content"
              >
                <div
                  class="css-gmbytu"
                >
                  <span
                    class="css-u3jcp4"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="lock"
                      fill="currentColor"
                      focusable="false"
                      height="18"
                      viewBox="64 64 896 896"
                      width="18"
                    >
                      <path
                        d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                      />
                    </svg>
                  </span>
                  <span
                    class="project-selector-label-text"
                  >
                    test_project_3
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="show-more-project-wrapper"
          >
            <a
              href="/project"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-1yfaqef ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  查看更多项目
                </span>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
